# ChangeLog for x11-misc/googleearth
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/googleearth/ChangeLog,v 1.42 2009/02/08 14:36:06 caster Exp $

*googleearth-5.0.11337.1968_beta (08 Feb 2009)

  08 Feb 2009; Vlastimil Babka <caster@gentoo.org>
  +googleearth-5.0.11337.1968_beta.ebuild:
  Version bump, bug #257533.

  06 Feb 2009; Vlastimil Babka <caster@gentoo.org>
  googleearth-4.3.7284.3916.ebuild:
  Update SRC_URI to the new upstream location, as the old link now points to
  a 5.0 beta - bug #256267. Yay for upstream-versioned distfile, the SRC_URI
  arrow is not needed anymore, but kept it so people don't download again.

  27 Sep 2008; Vlastimil Babka <caster@gentoo.org>
  googleearth-4.3.7284.3916.ebuild:
  Use EAPI=2 and SRC_URI arrow in 4.3 to put version in the distfile's
  filename. So that all versions cane have own Manifest entry. Fixes bug
  #236771.

*googleearth-4.2.205.5730 (10 Aug 2008)

  10 Aug 2008; Stephanie Lockwood-Childs <wormo@gentoo.org>
  +googleearth-4.2.205.5730.ebuild, googleearth-4.3.7284.3916.ebuild:
  Introduce partially revisioned SRC_URI recommended by Daniel Wallace
  in bug #221105, so now 4.2 ebuild can be available in parallel with 4.3

  09 Aug 2008; Stephanie Lockwood-Childs <wormo@gentoo.org>
  googleearth-4.3.7284.3916.ebuild:
  Add libXinerama dependency reported by Toralf Förster (bug #222489)

*googleearth-4.3.7284.3916 (09 Aug 2008)

  09 Aug 2008; Stephanie Lockwood-Childs <wormo@gentoo.org>
  -googleearth-4.2.205.5730.ebuild, +googleearth-4.3.7284.3916.ebuild:
  Need another version bump since the old version has been overwritten
  by a newer one again

  08 May 2008; Jeff Gardner <je_fro@gentoo.org> ChangeLog:
  Digest for bug #219387a

  22 Dec 2007; Stefan Schweizer <genstef@gentoo.org>
  -googleearth-4.2.198.2451.ebuild, +googleearth-4.2.205.5730.ebuild:
  version bump thanks Toralf Förster <toralf.foerster@gmx.de> in bug 203027
