@@ -1,9 +1,11 @@
 AUX mime-magic.patch 572 RMD160 e49ddaf43ca7de3cfabf08754f4f4d21864a3489 SHA1 e6689a0f970cfc677749e1ee3aeeaa3b8f5605fc SHA256 302bfab0aa2edd09a2a83f7040de4dcc09998e822555b85242e2e8cb05fb3a12
 DIST GoogleEarthLinux-4.3.7284.3916.bin 20554977 RMD160 de8f92a45b72d37ba66bc33dd20b2bd59df79fad SHA1 35b883f75ca0da4cc4b5888d345ed5ec2a53123e SHA256 aeb71c8e191df4b3689ef45e6b2346b4b7c3910738f92deadb265a044e68277e
 DIST GoogleEarthLinux-5.0.11337.1968_beta.bin 25338751 RMD160 a215323b37baacad3fa404c381fcbd3a9fd3b3ad SHA1 c98d15b21159f799092cf7a1cd29258eeb5e7fbc SHA256 acc5e40684a1b1c26164423e4b1b62719031c3915fced94f5277dcd9560609c0
+DIST GoogleEarthLinux-5.0.11729.1014.bin 25602325 RMD160 da38adfa2eb8766dacf4f7822778335d8bfbc389 SHA1 9fde78e8b68261c968b8898f8dc935540ff85d8d SHA256 5a191f3023c6100035dd76cfa22f7c146ca9fbf735490dd6c4300b8e1e97abf0
 DIST GoogleEarthLinux.bin 23048189 RMD160 bf8994f6aa9f4204510023ac629c331789e3969b SHA1 25b4b546625423b2e570ff8aae5ee7eff49a1b97 SHA256 da7d22cb13cc5f047dea6ae241bb33c5ac1789a9f601e09dcb025fe574df4516
 EBUILD googleearth-4.2.205.5730.ebuild 2071 RMD160 8192bab1be53ac5ec031b25e38153132b5f750fd SHA1 b2b977a8829960f4fbeba2f4eadb0b2dce4a8fed SHA256 07ab620ee20456354574fb5b083eed4b5ad0027856ff45c80ec958c1834f7e3c
 EBUILD googleearth-4.3.7284.3916.ebuild 2158 RMD160 b76715d8f85b564cd289a586042ce0676bbb6d76 SHA1 7894219bf4848fcc9f8e35725b685a0e2a9b1b93 SHA256 3a30847bd9321b94ce94e053f5207746b2c74607906fbd17c68cd586d4ef9864
 EBUILD googleearth-5.0.11337.1968_beta.ebuild 2137 RMD160 256de0fe033c2975d1b3de67098f5101cb230f37 SHA1 1869cff3bd14c0f5036cef4f6a926898d831d11a SHA256 85fdf27d70e498303eb716f2cbbedf7d7ba90d3072e9ae6ffa8672f5c4dd74a5
-MISC ChangeLog 7484 RMD160 1728c34f6d1678bdff69d303f9b16b170507ac8c SHA1 bdcc88eaeaf1a398af9e12172f3f700cf941fc2f SHA256 e15d34ca11cff982c12cf185182266affb0be67e3eb00c971daf078fd6f26fc9
+EBUILD googleearth-5.0.11729.1014.ebuild 2455 RMD160 2d9574efc853336f563b55d0ce38f02dc146d5ae SHA1 47ee4f18856706dcc6be638ae7c99ce655d855ec SHA256 1cfd1967c14b4956f03346e243b158e8e085f34734e5cb1ca95c53252b1d9d3c
+MISC ChangeLog 7698 RMD160 40654efda6a0c25009cd6f2e6767f097d9639bc3 SHA1 3b659234f16fdafb4b277bb36f0a2d1ac3e382a2 SHA256 669fd7d9895c3671421b322ea79d7ad4e74c32ee514ce56e6c46bec9d9fa169c
 MISC metadata.xml 325 RMD160 a7051f86b61260d8a682b108bf6a7eed0edc7bd1 SHA1 93b04166fd686b8af24c69b0acee7c1781110883 SHA256 4029c778cbc31db5f49fd0467781a733e1be2530c3d88484d8d5c817a4ea2840
